# NNCreator

./: .configure.sh  .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  INSTALL.md  README.md  clang-format-all  run.sh
datasets/: README.md  andgate.csv  andgateCat.csv  andgateCat3.csv  btcusd.csv  btest.csv  classifier.csv  cosx.csv  iris.data  orgate.csv  rnn.csv  sinx.csv  smalliris.data  wine.data  xorgate.csv  xorgatetest.csv  xorparity3.csv  xorparity3test.csv  xorparityCat.csv
datasets/cvc/: xorgate20.csv  xorgate21.csv  xorgate22.csv  xorgate23.csv
include/Backend/Database/: GList.h  GLogger.h  GObject.h  GPointer.h  GString.h  GTable.h  GType.h  GVector.h  PNGPlotter.h  SaveFolder.h  SaveTable.h  Serializable.h  ServiceData.h  StandItem.h  image.h  maxid.h  oldjson.h  png-helper.h  standardizable.h
include/Backend/Machine Learning/: ImageInput.h  RNN.h  bayes.h  glades.h  main.h  metanetwork.h  network.h  nnetwork_status.h  rng.h
include/Backend/Machine Learning/DataObjects/: DataInput.h  ImageInput.h  MappedMatrix.h  MappedNumberInput.h  NumberInput.h  TokenInput.h  glades.h  tabular_preprocessing.h
include/Backend/Machine Learning/GMath/: OHE.h  SmartTable.h  cmatrix.h  gmath.h  kmeans.h  pca.h
include/Backend/Machine Learning/Networks/: RNN.h  aligned_allocator.h  bayes-optimizer.h  bayes.h  cross_validation.h  metanetwork.h  network.h  param_layout.h  sgd_utils.h  tensor_view.h  trainer.h  training_callbacks.h  training_config.h  training_core.h  transformer_kernels.h  transformer_ops.h  transformer_public_api.h  transformer_serving_layer.h
include/Backend/Machine Learning/State/: LayerBuilder.h  NetworkState.h  Terminator.h  edge.h  layer.h  node.h
include/Backend/Machine Learning/Structure/: hiddenlayerinfo.h  inputlayerinfo.h  layerinfo.h  nninfo.h  outputlayerinfo.h
include/Backend/Networking/: connection.h  crypt.h  main.h  service.h  socket.h
include/Backend/Plotter/: ChartLayout.h  ChartStyler.h  ColorManager.h  DataMapper.h  GridRenderer.h  Plotter.h  ShapeRenderer.h  SuperSamplingManager.h  TextRenderer.h
include/Frontend/GFXUtilities/: ActionBubble.h  Candle.h  Circle.h  DrawNeuralNet.h  Ellipse.h  EventTracker.h  Horizontal_Line.h  RULayerInfo.h  point2.h  quaternion.h  scalar1.h  vec3.h
include/Frontend/GItems/: GItem.h  GLayout.h  GPanel.h  GeneralListener.h  RUColors.h  RUComponent.h  RUItemArea.h
include/Frontend/GItems/Mini/: RUBackgroundComponent.h  RUBorderComponent.h  RUKeyDown.h  RUKeyUp.h  RULoseFocus.h  RUMouseDown.h  RUMouseMotion.h  RUMouseUp.h  RUMouseWheel.h
include/Frontend/GLayouts/: GLinearLayout.h  GRelativeLayout.h
include/Frontend/GUI/: RUCheckbox.h  RUDropdown.h  RUForm.h  RUImageComponent.h  RUListbox.h  RUMsgBox.h  RUProgressBar.h  RUScrollbar.h  RUTabContainer.h  RUTable.h
include/Frontend/GUI/Text/: GFont.h  GLTextRenderer.h  RUButton.h  RULabel.h  RUTextComponent.h  RUTextbox.h
include/Frontend/Graphics/: GfxRenderer.h  GfxRendererGL.h  GfxRendererGLFW.h  GfxRendererSDL.h  GfxTextureGL.h  GfxTypes.h  gfxpp3D.h  graphics.h
include/Frontend/RUGraph/: GeneralGraphable.h  Graphable.h  GraphableAttr.h  RUDrawComponent.h  RUGraph.h
include/services/: gui_callback.h
src/: CMakeLists.txt  crt0.cpp  crt0.h  main.cpp  main.h  nncreator.cpp  nncreator.h
src/core/: CMakeLists.txt  error.cpp  error.h  md5.cpp  md5.h  version.cpp  version.h
src/services/: bayes_train.h  cv_test.h  ml_test.h  ml_train.h  rnn_train.h
